Fix whitespace issue

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -373,7 +373,7 @@ ul.inline {
   display: inline;
   list-style-type: none;
   margin: 0;
-  padding: 5px;
+  padding: 0;
 }
 
 .stat {
